fix bug of not showing score after restart

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 
 h2 {
   margin: 10px 0 10px 0;
+  text-align: center;
 }
 
 h3 {
@@ -24,10 +25,4 @@ h3 {
 
 div {
   margin: -10px 0;
-}
-
-#xp5_loading {
-  background-image: url('assets/landing-background.png');
-  width: 1216px;
-  height: 768px;
 }
